[package]
name = "instagram-scraper-rs"
version = "0.1.0"
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
edition = "2021"
categories = ["web-programming"]
description = "Scrapes an instagram user's photos and videos"
documentation = "https://docs.rs/instagram-scraper-rs"
homepage = "https://github.com/veeso/instagram-scraper-rs"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["instagram", "instagram-scraper", "scraper"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/instagram-scraper-rs"

[dependencies]
const_format = "^0.2"
log = "^0.4"
reqwest = { version = "^0.12", default-features = false, features = [ "json", "cookies" ] }
serde = { version = "^1", features = [ "derive" ] }
serde_json = "^1.0.128"
serde_with = { version = "^3.11.0", features = [ "json" ] }
thiserror = "^1.0.64"

[dev-dependencies]
anyhow = "^1.0.89"
pretty_assertions = "^1.4.1"
tempfile = "3.13.0"
tokio = { version = "^1.40", features = [ "full" ] }
tracing = "^0.1"
tracing-subscriber = "^0.3"

[features]
default = [ "native-tls" ]
github-ci = []
no-log = [ "log/max_level_off" ]
native-tls = [ "reqwest/native-tls" ]
rustls = [ "reqwest/rustls-tls" ]

[[example]]
name = "scraper"
path = "examples/scraper.rs"
